Configuração da sessão inicial, texto e depoimentos

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!--font awesome-->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css" integrity="sha512-5A8nwdMOWrSz20fDsjczgUidUBR8liPYU+WymTZP1lmY9G6Oc7HlZv156XqnsgNUzTyMefFTcsFH/tnJE/+xBg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
   <link rel="stylesheet" href="css/style.css">
   <title>WebSite</title>
 </head>
@@ -30,5 +32,101 @@
       </section>
     </div>
   </header>
+  <section class="faca-mais">
+    <div class="container">
+      <div class="faca-mais-text">
+      <h3>Faça Mais com o Universo Developer</h3>
+      <p>
+        Criação de Websites, loja virtual, blogs para pequenas, médias e grande empresas.
+        Ter um site online nunca foi tão fácil!
+      </p>
+      <a href="contacto.html" class="btn animate-btn">Entrar em Contato</a>
+    </div>
+    <div class="faca-mais-img">
+      <img src="img/img-1.png" alt="">
+    </div>
+  </section>
+  <!--faça mais 2-->
+  <section class="faca-mais">
+    <div class="container">
+      <div class="faca-mais-img">
+        <img src="img/img-2.png" alt="">
+      </div>
+      <div class="faca-mais-text">
+      <h3>Construa seu WebSite</h3>
+      <p>
+        Desenvolvemos websites de forma rapida e pratica.
+      </p>
+    </div>
+  </section>
+  <!--depoimentos-->
+  <section class="depoimentos">
+    <div class="container">
+      <h3>Nossos Depoimentos</h3>
+      <p>Leia o que nossos cleintes falam de nos para o mundo</p>
+      <div class="cards">
+        <!--card item-->
+        <div class="card-item">
+          <img src="img/me.jpg" alt="m">
+          <p class="nome-user">Lucas Souza</p>
+          <p class="depoimento-user">
+            Muito bom esse site, super recomendo!
+          </p>
+          <div class="estrelas">
+            <i class="fa fa-star" aria-hidden="true"></i>
+            <i class="fa fa-star" aria-hidden="true"></i>
+            <i class="fa fa-star" aria-hidden="true"></i>
+            <i class="fa fa-star" aria-hidden="true"></i>
+            <i class="fa fa-star-o" aria-hidden="true"></i>
+          </div>
+        </div>
+                <!--card item-->
+        <div class="card-item">
+          <img src="img/me.jpg" alt="m">
+          <p class="nome-user">Lucas Souza</p>
+          <p class="depoimento-user">
+            Muito bom esse site, super recomendo!
+          </p>
+          <div class="estrelas">
+            <i class="fa fa-star" aria-hidden="true"></i>
+            <i class="fa fa-star" aria-hidden="true"></i>
+            <i class="fa fa-star" aria-hidden="true"></i>
+            <i class="fa fa-star" aria-hidden="true"></i>
+            <i class="fa fa-star-o" aria-hidden="true"></i>
+          </div>
+        </div>
+             <!--card item 2-->
+              <div class="card-item">
+                <img src="img/me.jpg" alt="m">
+                <p class="nome-user">Lucas Souza</p>
+                <p class="depoimento-user">
+                  Muito bom esse site, super recomendo!
+                </p>
+                <div class="estrelas">
+                  <i class="fa fa-star" aria-hidden="true"></i>
+                  <i class="fa fa-star" aria-hidden="true"></i>
+                  <i class="fa fa-star" aria-hidden="true"></i>
+                  <i class="fa fa-star" aria-hidden="true"></i>
+                  <i class="fa fa-star-o" aria-hidden="true"></i>
+                </div>
+              </div>
+                  <!--card item 3-->
+        <div class="card-item">
+          <img src="img/me.jpg" alt="m">
+          <p class="nome-user">Lucas Souza</p>
+          <p class="depoimento-user">
+            Muito bom esse site, super recomendo!
+          </p>
+          <div class="estrelas">
+            <i class="fa fa-star" aria-hidden="true"></i>
+            <i class="fa fa-star" aria-hidden="true"></i>
+            <i class="fa fa-star" aria-hidden="true"></i>
+            <i class="fa fa-star" aria-hidden="true"></i>
+            <i class="fa fa-star-o" aria-hidden="true"></i>
+          </div>
+        </div>
+     </div>
+    </div>
+  </section>
 </body>
 </html>
