criação da Home

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
   <section class="depoimentos">
     <div class="container">
       <h3>Nossos Depoimentos</h3>
-      <p>Leia o que nossos cleintes falam de nos para o mundo</p>
+      <p>Leia o que nossos clintes falam de nos para o mundo</p>
       <div class="cards">
         <!--card item-->
         <div class="card-item">
@@ -128,5 +128,41 @@
      </div>
     </div>
   </section>
+  <!--clientes-->
+  <section class="clientes">
+    <div class="container">
+      <h3>Nossos Clientes</h3>
+      <p>Prestamos serviços a todo tipo de empresa, fique de olho em alguma delas</p>
+      <div>
+        <img src="img/apple.png" alt="">
+        <img src="img/microsoft.png" alt="">
+        <img src="img/slack.png" alt="">
+        <img src="img/google.png" alt="">
+      </div>
+    </div>
+  </section>
+  <section class="faca-mais">
+    <div class="container">
+      <div class="faca-mais-text">
+      <h3>Tenha um website seguro</h3>
+      <p>
+        Tecnologias seguras e atualizadas, sem você se preocupar.
+      </p>
+    </div>
+    <div class="faca-mais-img">
+      <img src="img/security.png" alt="">
+    </div>
+  </section>
+  <footer class="footer">
+    <div class="container">
+      <div class="links">
+        <a href="#"><i class="fa fa-facebook"></i></a>
+        <a href="#"><i class="fa fa-instagram" aria-hidden="true"></i></a>
+        <a href="#"><i class="fa fa-github"></i></a>
+        <a href="#"><i class="fa fa-linkedin"></i></a>
+      </div>
+      <p>Michele Souza - Todos os direitos reservados</p>
+    </div>
+  </footer>
 </body>
 </html>
