criação do menu responsivo

--- a/index.html
+++ b/index.html
@@ -21,7 +21,13 @@
           <a href="sobre.html">Sobre</a>
           <a href="servicos.html">Serviços</a>
           <a href="contacto.html" class="btn">Contato</a>
+          <div class="close-icon" onclick="closeMenu()">
+            <i class="fa fa-times-circle"></i>
+          </div>
         </ul>
+        <div class="menu-icon" onclick="openMenu()">
+          <i class="fa fa-bars"></i>
+        </div>
       </nav>
       <section class="banner">
         <div class="banner-text">
@@ -67,8 +73,8 @@
       <div class="cards">
         <!--card item-->
         <div class="card-item">
-          <img src="img/me.jpg" alt="m">
-          <p class="nome-user">Lucas Souza</p>
+          <img src="img/mi.jpg" alt="m">
+          <p class="nome-user">Michele Souza</p>
           <p class="depoimento-user">
             Muito bom esse site, super recomendo!
           </p>
@@ -82,8 +88,8 @@
         </div>
                 <!--card item-->
         <div class="card-item">
-          <img src="img/me.jpg" alt="m">
-          <p class="nome-user">Lucas Souza</p>
+          <img src="img/mi.jpg" alt="m">
+          <p class="nome-user">Michele Souza</p>
           <p class="depoimento-user">
             Muito bom esse site, super recomendo!
           </p>
@@ -97,8 +103,8 @@
         </div>
              <!--card item 2-->
               <div class="card-item">
-                <img src="img/me.jpg" alt="m">
-                <p class="nome-user">Lucas Souza</p>
+                <img src="img/mi.jpg" alt="m">
+                <p class="nome-user">Michele Souza</p>
                 <p class="depoimento-user">
                   Muito bom esse site, super recomendo!
                 </p>
@@ -112,8 +118,8 @@
               </div>
                   <!--card item 3-->
         <div class="card-item">
-          <img src="img/me.jpg" alt="m">
-          <p class="nome-user">Lucas Souza</p>
+          <img src="img/mi.jpg" alt="m">
+          <p class="nome-user">Michele Souza</p>
           <p class="depoimento-user">
             Muito bom esse site, super recomendo!
           </p>
@@ -164,5 +170,6 @@
       <p>Michele Souza - Todos os direitos reservados</p>
     </div>
   </footer>
+  <script src="js/main.js"></script>
 </body>
 </html>
